<resources>
    <string name="app_name">XYZ</string>


    <string name="tab1">Tab1</string>
    <string name="tab2">Tab2</string>
    <string name="tab3">Tab3</string>
    <string name="tab4">Tab4</string>
    <string name="tab5">Tab5</string>
    <string name="tab6">Tab6</string>
    <string name="home">Home</string>
    <string name="messenger">Messenger</string>
    <string name="box">Box</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="logout">Logout</string>
    <string name="help_and_legal">Help and Legal</string>
    <string name="helpline">HelpLine</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="others">Others</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="bengali">Bengali</string>
    <string name="leftTab">Left One</string>
    <string name="rightTab">Right One</string>
    <string name="next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="under_development">Under Development</string>
</resources>
