<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.fragment.MoreFragment">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/more"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/logoutTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:textColor="@color/colorPrimary" />


            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:paddingTop="5dp"
                            android:paddingRight="15dp"
                            android:text="@string/help_and_legal"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/helpLineL"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingTop="5dp">


                            <TextView
                                android:id="@+id/helpLineTV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:maxLines="1"
                                android:paddingTop="10dp"
                                android:paddingBottom="15dp"
                                android:text="@string/helpline"
                                android:textColor="@color/colorPrimary" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height=".5dp"
                                android:background="@color/offWhite" />

                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/termsOfUseL"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:orientation="vertical"
                            android:paddingTop="5dp">


                            <TextView
                                android:id="@+id/termsOfUseTV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:maxLines="1"
                                android:paddingTop="10dp"
                                android:paddingBottom="15dp"
                                android:text="@string/terms_and_conditions"
                                android:textColor="@color/colorPrimary" />

                        </LinearLayout>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="5dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:paddingTop="5dp"
                            android:paddingRight="15dp"
                            android:text="@string/others"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:maxLines="1"
                            android:paddingTop="15dp"
                            android:text="@string/language"
                            android:textColor="@color/colorPrimary" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/englishRB"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".5"
                                android:text="@string/english"
                                android:textColor="@color/colorPrimary" />

                            <RadioButton
                                android:id="@+id/banglaRB"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".5"
                                android:text="@string/bengali"
                                android:textColor="@color/light_gray"/>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>
